fix: remove overflow on html,body and add scroll behavior to main

--- a/src/common/styles/globals.scss
+++ b/src/common/styles/globals.scss
@@ -7,16 +7,10 @@
 @layer base {
   html {
     font-size: 16px;
-    overflow: hidden;
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
-  }
-
-  body {
-    overflow: auto;
-    overscroll-behavior: none;
   }
 
   *,
